[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/player_controller.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/sprite_frames_1.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/art/palette_swap_material.tres" type="Material" id=3]
[ext_resource path="res://assets/art/player/Dust Particle.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/land.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/annoyed quack 2.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/hurt_box.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/hit_box.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sounds/jump.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/roll.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/annoyed quack.mp3" type="AudioStream" id=16]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=6]
radius = 13.0

[node name="PlayerController" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Particles" type="Node2D" parent="."]

[node name="WalkParticles" type="CPUParticles2D" parent="Particles"]
emitting = false
amount = 5
lifetime = 0.6
speed_scale = 1.5
randomness = 0.73
lifetime_randomness = 0.33
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 25.0
gravity = Vector2( 0, 130 )
initial_velocity = 50.0
initial_velocity_random = 0.5
scale_amount_curve = SubResource( 1 )

[node name="SlideParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2( 8, -20 )
emitting = false
amount = 4
lifetime = 0.5
randomness = 0.73
lifetime_randomness = 0.33
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 35.0
gravity = Vector2( 0, 120 )
initial_velocity = 55.0
initial_velocity_random = 0.5
scale_amount_curve = SubResource( 1 )

[node name="LandParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2( 0, -4 )
emitting = false
amount = 15
speed_scale = 1.5
randomness = 0.73
lifetime_randomness = 0.33
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 103.35
gravity = Vector2( 0, 130 )
initial_velocity = 70.0
initial_velocity_random = 0.5
scale_amount_curve = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, -16 )
frames = ExtResource( 2 )
animation = "idle"
frame = 6
speed_scale = 3.0
playing = true

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/invincible = SubResource( 2 )
anims/normal = SubResource( 3 )

[node name="GroundCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 4 )

[node name="CeilingCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -16 )
shape = SubResource( 5 )

[node name="LeftWallCast" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="RightWallCast" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="LeftWallCast2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -22 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="RightWallCast2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -22 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="HurtBox" parent="." instance=ExtResource( 10 )]
visible = false

[node name="HitBox" parent="." instance=ExtResource( 12 )]
visible = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 6 )

[node name="Audio" type="Node2D" parent="."]

[node name="Dead" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 16 )

[node name="Hurt" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )

[node name="Land" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
volume_db = 5.0

[node name="Roll" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 15 )
volume_db = -15.0

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 14 )
volume_db = 5.0

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HurtBox"]
[editable path="HitBox"]
